kubernetes/apps/rook-ceph/cluster/app/ceph-bucket-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-bucket
  namespace: rook-ceph
  annotations:
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "s3.labcloud.cc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-ceph-objectstore
                port:
                  number: 80
  tls:
    - hosts:
        - *host
